# invisible-map-generation

./: .gitignore  .pre-commit-config.yaml  122443012900625-Living Room.json  CMakeLists.txt  Dockerfile  GraphManager.py  LICENSE  README.md  TestDummy.ipynb  TestSBA-WithAnchors.ipynb  alpha_gt_correction.py  alpha_test_jan_third.txt  alpha_test_results.json  as_graph.py  basicstyle.css  check_errs.py  convert_json.py  convert_json_sba.py  convert_pickle.py  convert_posegraph.py  correlate_metrics.py  correlation_results.json  debug_log.txt  eval-intro.html  firebase_manager.py  g2o-intro.html  g2opy_setup.sh  get_subgraph_test.py  graph.py  graph_manager_user.py  graph_utils.py  graph_vertex_edge_classes.py  graphs-intro.html  index.html  investigate.py  mass_run.sh  math.org  metrics.py  nineteenth.txt  optimize_weights.py  (+25 more)
archive/: README.md  alpha_gt_correction.py  check_errs.py  convert_json.py  convert_json_sba.py  convert_pickle.py  convert_posegraph.py  correlate_metrics.py  get_subgraph_test.py  metrics.py  optimization_plot_gallery.ipynb  optimize_weights.py  plot_graph.py  pose_graph.py  repeat_run_automation.py  test_firebase.py  test_firebase_sba.py  test_json.py  validate_analogous_params.py  validate_pseudo_gt_metric.py  validate_shift_metric_sweep.py  visualize_chi2s.py
benchmarking/: README.md  __init__.py  alpha_gt_correcation.py  alpha_gt_correction.py  alpha_visualizer.py  benchmarking_config.json  benchmarking_utils.py  error_analysis_quat.py  floor_2_left_variance.csv  floor_2_right_variance.csv  loop_closure_comparison.json  overlay_tags.py  (+3 more)
(+211 files in other folders)
