<?xml version="1.0"?>
<package format="2">
  <name>invisible_map_generation</name>
  <version>0.0.0</version>
  <description>The invisible-caliber package</description>

  <maintainer email="concavemail@gmail.com">Kawin Nikomborirak</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>apriltags_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
